--- a/src/google-fellowship.tex
+++ b/src/google-fellowship.tex
@@ -6,7 +6,7 @@
 
 % Automatix LaTeX build system modules
 
-%\usepackage{svg}
+\usepackage{svg}
 %\usepackage{py}
 
 %-------------------------------------------------------------------------
@@ -26,7 +26,10 @@
 
 % Body
 
-\input{sec-proposal}
+\input{sec-intro}
+%\input{sec-background}
+\input{sec-xpc}
+\input{sec-conclusion}
 
 % References
 
