--- a/src/fig-intro-overview.tex
+++ b/src/fig-intro-overview.tex
@@ -9,9 +9,8 @@
 
   \caption{\textbf{Example of Fine-Grain Heterogeneous Architectures --}
     A sea of lightweight compute tiles composed of both general-purpose
-    tiles (CPUs) and accelerators specialized for exploiting varying
-    forms of parallelism (GPUs for graphics and DSPs for digital signal
-    processing).}
+    tiles (GP tiles) and data-parallel accelerators specialized for
+    exploiting different forms of data parallelism (DP tiles).}
 
   \label{fig-intro-overview}
 
