--- a/src/sec-conclusion.tex
+++ b/src/sec-conclusion.tex
@@ -6,14 +6,14 @@
 \label{sec-conclusion}
 
 The XPC architecture provides a fundamentally different abstraction for
-heterogeneous architectures by explicitly encoding parallel function
-calls in the software/hardware interface. By exploring both software and
-hardware approaches for exposing, scheduling, and executing fine-grain
-parallel tasks, we can identify permutations yielding high performance
-and energy efficiency for a wide range of amorphous data parallel
-applications with reasonable hardware complexity overhead. We believe the
-seamless adaptivity across a sea of general-purpose tiles and various
-accelerators specialized for different forms of parallelism provided by
-the XPC architecture is one promising approach to address the significant
-challenges in technology and applications facing computer architecture
-today.
+heterogeneous architectures by exposing fine-grain parallel tasks as
+parallel function calls in the software/hardware interface. By exploring
+both software and hardware approaches for exposing, scheduling, and
+executing fine-grain parallel tasks, it is possible to identify
+permutations yielding high performance and energy efficiency for a wide
+range of amorphous data parallel applications with reasonable hardware
+complexity overhead. The seamless adaptivity across a sea of
+general-purpose and data-parallel accelerator tiles specialized for
+exploiting a broad range of amorphous data parallelism is one promising
+approach to address the significant challenges in technology and
+applications facing computer architects today.
