--- a/src/sec-intro.tex
+++ b/src/sec-intro.tex
@@ -15,52 +15,67 @@
   \end{minipage}
 \end{figure}
 
-Microprocessor design has reached a point where the efficacy of simply
-adding more cores onto the chip has been saturated. Due to this and many
-other technological challenges, computer architects are increasingly
-turning toward new abstractions to take advantage of the growing
-transistor density. For example, almost all general-purpose multicores include
-limited support for exploiting data parallelism with subword-SIMD
-extensions (e.g., Intel SSE~\cite{intel-sse4-manual2007}, IBM Cell SIMD
-extensions~\cite{gschwind-ibm-cell-ieeemicro2006}, and
-others~\cite{slingerland-simd-survey-ucbtr2000}). A common trend is a
-coarse-grain approach to heterogeneous architectures such as Intel
+Microprocessor design has reached the limits of improving performance and
+energy efficiency by scaling the number of general-purpose cores on a
+chip. Instead, computer architects are turning toward a heterogeneous mix
+of general-purpose cores and data-parallel accelerators to exploit the
+ubiquitous data parallelism present in modern applications such as graph
+processing, physical simulation, big data analytics, and machine
+learning. Recent examples include the Intel
 Haswell~\cite{hammarlund-intel-haswell-ieeemicro2014}, AMD
 Kabini~\cite{bouvier-amd-kabini-ieeemicro2014}, and NVIDIA Tegra
-4~\cite{krewell-nvidia-tegra4-mpr2013}, where general-purpose multicores
-are colocated with graphics processing units.
+4~\cite{krewell-nvidia-tegra4-mpr2013}, which integrate general-purpose
+multicores with programmable graphics processing units (GPUs) at a coarse
+granularity. Although this strategy has been promising, there is no clear
+answer yet to the new challenges imposed by heterogeneous architectures,
+like a unified software framework or optimal scheduling for adaptive
+execution. In order to address these challenges, I believe the future
+will move toward a more \emph{fine-grain intermingling} of many
+lightweight general-purpose cores and data-parallel accelerators unified
+under a single ISA with support for \emph{seamless adaptive execution} of
+parallel tasks as shown in Figure~\ref{fig-intro-overview}.
 
-However, emerging trends in applications are demanding a more fundamental
-paradigm shift in computer architecture. For example, a ubiquitous type
-of \emph{amorphous data parallelism} that encapsulates many types of existing
-data parallelism can dynamically modify the underlying data structure as
-well as generate most of its work
-dynamically~\cite{pingali-tao-pldi2011}. These emerging applications can
-be highly unpredictable and also exhibit varying levels of parallelism
-based on the phase of execution or input dataset.
-%Examples include graph processing, physical simulation, big data
-%analytics, large-scale optimization, and machine learning.
-GPU vendors are beginning to adopt parallel programming frameworks that
-offer limited support for handling amorphous data parallelism at a coarse
-granularity and heavily relying on software (e.g., AMD heterogeneous
-system architecture~\cite{amd-hsa-wpaper2012} and NVIDIA dynamic
-parallelism
-constructs~\cite{nvidia-dynamic-parallelism-wpaper2012}). Unfortunately,
-the current abstractions for computer architecture are not ideal for the
-rapid, dynamic task distribution necessary to fully capitalize on
-opportunities for accelerating these emerging applications, largely due
-to the complexity of the compute tiles and the cost of spawning parallel
-tasks.
+Data-parallel accelerators like those used in current coarse-grain
+heterogeneous architectures focus on exploiting \emph{conventional data
+  parallelism} in which tasks generally have highly regular control and
+memory-access structures and do not interact with each other.  However, a
+growing number of modern applications exhibit a generalized form of data
+parallelism called \emph{amorphous data parallelism} in which tasks can
+conflict with each other, be generated dynamically, and modify the
+underlying data structure~\cite{pingali-tao-pldi2011}. Mapping such
+applications to current data-parallel accelerators can be difficult and
+usually require aggressive software
+optimizations~\cite{luo-gpu-bfs-dac2010,harish-large-graph-gpu-hipc2007,
+  hong-cuda-max-warp-ppopp2011,nasre-data-vs-topo-ipdps2013,
+  nasre-morph-ppopp2013,mendez-optimizations-amorphous-ppopp2010,
+  mendez-gpu-pta-ppopp2012}. Ideally, future fine-grain heterogeneous
+architectures would employ accelerators for a broader range of amorphous
+data parallelism. These amorphous-data-parallel accelerators would be
+specialized not only for varying degrees of irregularity, but also for
+efficient conflict resolution or dynamic task generation. A broader range
+of accelerators would provide more options for adaptively scheduling
+tasks to accelerators they are best suited for.
 
-In order to address these challenges, this proposal outlines the
-Explicit-Parallel-Call (XPC) architecture, a fine-grain heterogeneous
-architecture that enables seamless adaptive execution of fine-grain
-parallel tasks across a sea of lightweight heterogeneous compute tiles
-like shown in Figure~\ref{fig-intro-overview}. It is imperative that a
-vertically integrated methodology is used to innovate across the
-software/hardware interface in order to address heterogeneous system
-complexity and meet the needs of emerging amorphous data parallel
-applications. To this end, the vision for the XPC architecture is to
-explore both software and hardware techniques for \emph{exposing},
-\emph{scheduling}, and \emph{executing} fine-grain parallel tasks as
-illustrated in Figure~\ref{fig-intro-vision}.
+This proposal outlines the Explicit-Parallel-Call (XPC) architecture, a
+fine-grain heterogeneous architecture based on the concept of explicitly
+encoding parallel tasks as parallel function calls in the software/hardware
+interface. Figure~\ref{fig-intro-overview} highlights the vertically
+integrated methodology that will be used to explore both software and
+hardware techniques for \emph{exposing}, \emph{scheduling}, and
+\emph{executing} fine-grain parallel tasks.
+
+Several aspects of the XPC architecture are inspired by my previous work
+on general-purpose graphics processing units (GPGPUs). In the paper
+published at ISCA 2013, I was able to improve the performance and energy
+efficiency of conventional data parallel applications GPGPUs by
+exploiting a new form of structure called \emph{value structure} to
+detect and eliminate redundant
+computations~\cite{kim-simt-vstruct-isca2013}. The benefits of this
+technique was less apparent for applications with more amorphous data
+parallelism. This issue was addressed in the paper published at MICRO
+2014, where \emph{hardware worklists} were utilized in GPGPUs to improve
+memory contention and load balancing when managing fine-grain parallel
+tasks, resulting in promising speedups for amorphous data parallel
+applications~\cite{kim-hwwl-micro2014}. The insights from these studies
+helped guide the designs for a broader range of data-parallel
+accelerators and system-wide task distribution schemes.
