--- a/src/google-fellowship.bib
+++ b/src/google-fellowship.bib
@@ -4956,6 +4956,14 @@
   year      = {2009}
 }
 
+@misc{frigo-cilk5-pldi1998,
+  author    = {M. Frigo. C. Leiserson, K. Randall},
+  journal   = PLDI,
+  month     = JUN,
+  title     = {The Implementation of the Cilk-5 Multithreaded Language},
+  year      = {1998},
+}
+
 @misc{amd-hsa-wpaper2012,
   author    = {AMD},
   howpublished = {AMD White Paper},
